kubernetes/adoption-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adoption-service
  namespace: pet-adoption
spec:
  replicas: 2
  selector:
    matchLabels:
      app: adoption-service
  template:
    metadata:
      labels:
        app: adoption-service
    spec:
      containers:
        - name: adoption-service
          image: petadoptionaleacr.azurecr.io/adoption-service:latest
          ports:
            - containerPort: 3820
---
apiVersion: v1
kind: Service
metadata:
  name: adoption-service
  namespace: pet-adoption
spec:
  selector:
    app: adoption-service
  ports:
    - protocol: TCP
      port: 3820
      targetPort: 3820
  type: ClusterIP
