kubernetes/cloud-storage-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-storage-service
  namespace: adoption-services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloud-storage-service
  template:
    metadata:
      labels:
        app: cloud-storage-service
    spec:
      containers:
        - name: cloud-storage-service
          image: petadoptionaleacr.azurecr.io/cloud-storage-service:latest
          ports:
            - containerPort: 3400
---
apiVersion: v1
kind: Service
metadata:
  name: cloud-storage-service
  namespace: adoption-services
spec:
  selector:
    app: cloud-storage-service
  ports:
    - protocol: TCP
      port: 3400
      targetPort: 3400
  type: ClusterIP
