kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pet-adoption-ingress
  namespace: pet-adoption
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host:
      http:
        paths:
          - path: /adoptions(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: adoption-service
                port:
                  number: 3820
